# pascal-wittmann.de

./: .gitignore  .travis.yml  Application.hs  Controller.hs  Foundation.hs  Handlers.hs  Homepage.hs  ILoveFS.hs  Import.hs  LICENSE  Model.hs  README.md  Settings.hs  client_session_key.aes  default.nix  devel.hs  exec.sh  flake.nix  homepage.cabal  homepage.nix  main.hs  server.hs  shell.nix
.github/workflows/: build.yml  scorecards.yml
Handler/: Admin.hs  Articles.hs  CachedFavicon.hs  Entries.hs  Impressum.hs  News.hs  Profile.hs  Root.hs  Sitemap.hs  StaticPages.hs
Handlers/: Admin.hs  Articles.hs  Auth.hs  Impressum.hs  Linux.hs  Log.hs  NewLog.hs  Referate.hs  Root.hs
Import/: NoFoundation.hs
Settings/: StaticFiles.hs
app/: devel.hs
cassius/: article.cassius  articles.cassius  default-layout.cassius  entries.cassius  entry.cassius
config/: lighttpd.conf  models  postgresql.yml  robots.txt  routes  settings.yml
hamlet/: admin.hamlet  article.hamlet  articles.hamlet  default-layout.hamlet  entries.hamlet  entry.hamlet  homepage.hamlet  impressum.hamlet  log.hamlet  new-entry.hamlet  newlog.hamlet  profile.hamlet  root.hamlet  upload-file.hamlet
messages/: de.msg  en.msg
pkg/: build.sh
static/: powered_by_yesod.psd
static/tmp/: 2d_-ZZx9.css  B-zF2qs2.css  O16WAqgV.css
templates/: about.hamlet  admin.hamlet  contact.hamlet  datenschutzerklaerung.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  entries.cassius  entries.hamlet  entry.cassius  entry.hamlet  impressum.hamlet  move-file.hamlet  new-entry.hamlet  privacy.hamlet  profile.hamlet  root.hamlet  upload-file.hamlet
tests/: HomeTest.hs  TestImport.hs  main.hs
