name:              homepage
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Pascal Wittmann
maintainer:        Pascal Wittmann
synopsis:          Personal website
description:       Personal website of Pascal Wittmann.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          https://www.pascal-wittmann.de

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Impressum
                     Handler.Entries
                     Handler.Admin
                     Handler.Profile
                     Handler.News
                     Handler.Sitemap

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

executable         homepage
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-platform                >= 1.0.5      && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0       && < 1.1
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 0.10
                 , persistent-postgresql         >= 0.9        && < 0.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , hjsmin                        >= 0.1        && < 0.2
                 , warp                          >= 1.2        && < 1.3

                 -- Custom dependencies
                 , yesod-markdown                >= 0.4.1      && < 0.5
                 , yesod-rst                     >= 0.2.1      && < 0.3
                 , yesod-newsfeed                >= 1.0        && < 1.1
                 , yesod-sitemap                 >= 1.0        && < 1.1
                 , containers
                 , time
                 , blaze-html                   >= 0.5         && < 0.6
                 , blaze-markup                 >= 0.5.1       && < 0.6
                 , old-locale
                 , filepath
                 , directory
