name:              homepage
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Pascal Wittmann
maintainer:        Pascal Wittmann
synopsis:          Personal website
description:       Personal website of Pascal Wittmann.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://www.pascal-wittmann.de

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Impressum
                     Handler.Entries
                     Handler.Admin
                     Handler.Profile
                     Handler.News
                     Handler.Sitemap

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions:
                TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.7
                 , persistent-postgresql         >= 2.1.1      && < 2.7
                 , persistent-template           >= 2.0        && < 2.7
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
--                 , hamlet                        >= 1.1        && < 1.2
--                 , shakespeare-css               >= 1.0        && < 1.1
--                 , shakespeare-js                >= 1.2        && < 1.3
--                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.3
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.3
                 , directory                     >= 1.1        && < 1.4
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.4
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 -- Custom dependencies
                 , yesod-markdown                >= 0.8
                 , yesod-newsfeed                >= 1.2
                 , yesod-sitemap                 >= 1.2
                 , containers
                 , time
                 , blaze-html                    >= 0.5
                 , blaze-markup                  >= 0.5.1
                 , old-locale
                 , filepath
                 , directory
                 , clientsession                 >= 0.9
                 , esqueleto
                 , yesod-persistent
                 , regex-compat
                 , load-env
                 , yesod-auth-oauth2
                 , yesod-csp

executable         homepage
    if flag(library-only)
        Buildable: False

    main-is:            main.hs
    hs-source-dirs:     app
    build-depends:      base
                      , homepage
                    --  , yesod
                      
    ghc-options:      -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    
    extensions:
                TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , homepage
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson